--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/W.loader.js";
+      var loaderUrl = buildUrl + "/webgpu.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/W.data.br",
-        frameworkUrl: buildUrl + "/W.framework.js.br",
-        codeUrl: buildUrl + "/W.wasm.br",
+        dataUrl: buildUrl + "/webgpu.data",
+        frameworkUrl: buildUrl + "/webgpu.framework.js",
+        codeUrl: buildUrl + "/webgpu.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "WebGLTest",
