webgpu decompression fallback

--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/webgpu.loader.js";
+      var loaderUrl = buildUrl + "/webgp.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/webgpu.data",
-        frameworkUrl: buildUrl + "/webgpu.framework.js",
-        codeUrl: buildUrl + "/webgpu.wasm",
+        dataUrl: buildUrl + "/webgp.data",
+        frameworkUrl: buildUrl + "/webgp.framework.js",
+        codeUrl: buildUrl + "/webgp.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "WebGLTest",
